--- a/app/src/main/res/menu/menu.xml
+++ b/app/src/main/res/menu/menu.xml
@@ -4,14 +4,14 @@
     <item
         android:id="@+id/navigation_menu"
         android:title="@string/home"
-        android:icon="@drawable/ic_launcher_background"/>
+        android:icon="@drawable/alphabet"/>
     <item
         android:id="@+id/navigation_favorite"
         android:title="@string/favorite"
-        android:icon="@drawable/ic_launcher_background"/>
+        android:icon="@drawable/ic_favorite_hitam"/>
     <item
         android:id="@+id/nav_map"
         android:title="@string/map"
-        android:icon="@drawable/ic_launcher_background"/>
+        android:icon="@drawable/umum"/>
 
 </menu>
