--- a/core/src/main/res/layout/item_list_kamus.xml
+++ b/core/src/main/res/layout/item_list_kamus.xml
@@ -22,8 +22,9 @@
             android:background="@android:color/white"
             android:contentDescription="@string/ini_adalah_gambar"
             android:scaleType="centerCrop"
-            app:layout_constraintDimensionRatio="H,1.5:1"
+            app:layout_constraintDimensionRatio="H,1.5:1.5"
             app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
