--- a/core/src/main/res/layout/item_list_kamus.xml
+++ b/core/src/main/res/layout/item_list_kamus.xml
@@ -22,7 +22,7 @@
             android:background="@android:color/white"
             android:contentDescription="@string/ini_adalah_gambar"
             android:scaleType="centerCrop"
-            app:layout_constraintDimensionRatio="H,1.5:1.5"
+            app:layout_constraintDimensionRatio="H,1.5:1.9"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
@@ -65,6 +65,8 @@
             android:layout_marginStart="16dp"
             android:layout_marginEnd="16dp"
             android:layout_marginBottom="16dp"
+            android:ellipsize="end"
+            android:maxLines="2"
             android:textAppearance="@style/TextAppearance.AppCompat.Body1"
             android:textColor="#B3FFFFFF"
             app:layout_constraintBottom_toBottomOf="@+id/iv_item_image"
